--- a/encryption/md5/csharp/WinMD5/WinMD5/MainWindow.xaml
+++ b/encryption/md5/csharp/WinMD5/WinMD5/MainWindow.xaml
@@ -23,7 +23,7 @@
                     <TextBlock x:Name="txtCurrent" VerticalAlignment="Center"></TextBlock>
                 </Border>
             </Grid>
-            <ProgressBar Grid.Row="2" x:Name="pbarFile" />
+            <ProgressBar Grid.Row="2" Margin="1" x:Name="pbarFile" />
             <Border Grid.Row="3" BorderThickness="3" BorderBrush="Bisque">
                 <TextBlock x:Name="txtResult"></TextBlock>
             </Border>
